sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value PlusPetitQue
	if ( PlusPetitQue( i, i+1)){
             ^